# emrtd

./: Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.adoc  README.md
.cargo/: config.toml
.github/workflows/: docker-image.yml  rust.yml
data/: DE_ML_2024-04-10-10-54-13.ml  README.adoc  README.md
examples/: read_emrtd.rs
src/: lib.rs
