[package]
name = "emrtd"
version = "0.0.1"
authors = ["Burak Can Kus"]
edition = "2021"
rust-version = "1.66.1"
description = "A library that can read an eMRTD and do security checks."
readme = "README.md"
repository = "https://github.com/Fethbita/emrtd"
license = "MIT OR Apache-2.0"
keywords = ["emrtd", "epassport", "eid", "electronic_id", "smartcard"]
categories = ["cryptography", "authentication", "command-line-utilities"]

[dependencies]
pcsc = "2.8.2"
openssl = { version = "0.10.64", features = ["vendored"] }
cipher = { version = "0.4.4", features = ["block-padding", "alloc"] }
des = "0.8.1"
aes = "0.8.4"
ecb = "0.1.2"
cbc = "0.1.2"
rasn = "0.14.0"
rasn-cms = "0.14.0"
rasn-pkix = "0.14.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
hex-literal = "0.4.1"
