[package]
name = "emrtd"
version = "0.0.2"
authors = ["Burak Can Kus"]
edition = "2021"
rust-version = "1.75.0"
description = "A library that can read an eMRTD and do security checks."
readme = "README.md"
repository = "https://github.com/Fethbita/emrtd"
license = "MIT OR Apache-2.0"
keywords = ["emrtd", "epassport", "eid", "electronic_id", "smartcard"]
categories = ["cryptography", "authentication", "command-line-utilities"]

[dependencies]
pcsc = "2.8.2"
cipher = { version = "0.4.4", features = ["block-padding", "alloc"] }
des = "0.8.1"
aes = "0.8.4"
cbc = "0.1.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
digest = "0.10.7"
md-5 = "0.10.6"
sha1-checked = "0.10.0"
sha2 = "0.10.8"
constant_time_eq = "0.3.1"
rand = { version = "0.8.5", features = ["getrandom"] }

openssl = { version = "0.10.66", features = ["vendored"], optional = true }
rasn = { version = "0.16.6", optional = true}
rasn-cms = { version = "0.16.6", optional = true}
rasn-pkix = { version = "0.16.6", optional = true}

[dev-dependencies]
hex-literal = "0.4.1"

[features]
default = ["passive_auth"]
passive_auth = ["dep:openssl", "dep:rasn", "dep:rasn-cms", "dep:rasn-pkix"]
